<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>melled.portfolio</groupId>
	<artifactId>melled.portfolio.parent</artifactId>
	<version>DEV-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	
	<properties>
		<tycho-version>5.0.1</tycho-version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<modules>
		<module>../melled-portfolio-target-definition</module>
		<module>../melled.portfolio.vorabpauschale</module>
		<module>../melled.portfolio.feature</module>
	</modules>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<pomDependencies>consider</pomDependencies>
					<executionEnvironment>JavaSE-21</executionEnvironment>
					<exclusions>
						<exclusion>
							<groupId>com.google.code.findbugs</groupId>
							<artifactId>jsr305</artifactId>
						</exclusion>
					</exclusions>
					<target>
						<artifact>
							<groupId>melled.portfolio</groupId>
							<artifactId>melle-portfolio-target-definition</artifactId>
							<version>${project.version}</version>
							<classifier>melle-portfolio-target-definition</classifier>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>aarch64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>aarch64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>aarch64</arch>
						</environment>
					</environments>
					<filters>
						<filter>	
							<type>eclipse-plugin</type>
							<id>org.eclipse.ui.ide</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_it</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_de</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_nl</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_pt</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_pt_BR</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_cs</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_fr</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_es</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_ru</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_sk</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_pl</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_zh</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_zh_TW</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_da</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_tr</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_vi</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.cocoa.macosx.aarch64.nl_ca</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_it</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_de</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_nl</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_pt</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_pt_BR</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_cs</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_fr</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_es</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_ru</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_sk</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_pl</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_zh</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_zh_TW</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_da</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_tr</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_vi</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.equinox.launcher.gtk.linux.aarch64.nl_ca</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_it</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_de</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_nl</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_pt</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_cs</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_fr</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_es</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_ru</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_sk</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_pl</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_tr</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_vi</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.e4.ui.swt.gtk.nl_ca</id>
							<removeAll />
						</filter>
					</filters>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<useProjectSettings>true</useProjectSettings>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.9.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<trimStackTrace>false</trimStackTrace>
						<!-- disable warnings about Mockito -->
						<argLine>-XX:+EnableDynamicAgentLoading -Djdk.xml.elementAttributeLimit=0</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-versions-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<updateVersionRangeMatchingBounds>true</updateVersionRangeMatchingBounds>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-publisher-plugin</artifactId>
					<version>${tycho-version}</version>
					<!-- Because we want to modify some files before they appear in the assembly repository,
					     we first move some of the executions from the default phase into the compile phase
					     to execute additional actions (sign executables) -->
					<executions>
						<execution>
							<id>default-publish-osgi-ee</id>
							<phase>compile</phase>
						</execution>
						<execution>
							<id>default-publish-products</id>
							<phase>compile</phase>
						</execution>
						<execution>
							<id>default-attach-artifacts</id>
							<phase>compile</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.6.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>